--- a/DotnetApiPostgres.Api/appsettings.json
+++ b/DotnetApiPostgres.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "Host=db;Port=5432;Database=personDb;Username=postgres;Password=postgres"
+  }
 }
