--- a/DotnetApiPostgres.Api/appsettings.Development.json
+++ b/DotnetApiPostgres.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "default": "Host=localhost;Port=5432;Database=PersonDb;Username=postgres;Password=Ravindra@123"
+    "default": "Host=db;Port=5432;Database=personDb;Username=postgres;Password=postgres"
   }
 }
