--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,7 +54,7 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          docker compose pull 
-          docker compose down 
-          docker compose up -d
+          docker-compose pull 
+          docker-compose down 
+          docker-compose up -d
           docker image prune -af
